# Standard-Imfomation

./: .gitignore
.claude/: settings.local.json
_ide/: .peers.ini  version.ini  workspace_journal.py
fe-study/: package-lock.json  package.json
fe-study-next/: package-lock.json  package.json
fe-study-next/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
fe-study-next/src/app/chapter/[id]/: page.tsx
fe-study-next/src/components/: ChapterContent.tsx  Diagram.tsx  Navbar.tsx  Quiz.tsx
fe-study-next/src/data/: curriculum.ts
fe-study/public/: index.html  robots.txt  sitemap.xml
fe-study/src/: App.tsx  index.css  index.tsx
fe-study/src/components/: Diagram.tsx  Navbar.tsx  Quiz.tsx
fe-study/src/data/: curriculum.ts
fe-study/src/pages/: ChapterPage.tsx  Home.tsx
fe-study/src/styles/: global.css
kitsunetest/: AfterImage.cpp  AfterImage.h  CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.h  NetStat.cpp  NetStat.h  compare_output.py  main.cpp
kitsunetest/hls/: CMakeLists.txt  kitsune_tb.cpp  kitsune_top.cpp  kitsune_top.h  kitsune_types.h  run_hls.bat  run_hls.tcl  run_hls_csim.tcl
kitsunetest/hls/kitsune_hls_proj/: hls.app
kitsunetest/hls/kitsune_hls_proj/solution1/: solution1.aps  solution1.directive  solution1_data.json
kitsunetest/hls/kitsune_hls_proj/solution1/.debug/: kitsune_update.protoinst
